2010-11-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-always-use-starttls): New variable.
	(proto-stream-open-starttls): De-duplicate the starttls code.
	(proto-stream-open-starttls): Folded back into the main function.
	(proto-stream-open-network): Fix typo in the gnutls path.
	(proto-stream-command): Refactor out.

	* nntp.el (nntp-open-connection): Fix the STARTTLS command syntax.

	* proto-stream.el (proto-stream-open-starttls): Actually implement the
	starttls.el STARTTLS.

	* color.el (color-lab->srgb): Fix function call name.

	* proto-stream.el (proto-stream-open-tls): Delete output from openssl
	if we're using tls.el.
	(proto-stream-open-network): If we don't have gnutls-cli or gnutls
	built in, then don't try to establish a STARTTLS connection.

	* nntp.el (nntp-open-connection): Switch on STARTTLS on supported
	servers.

	* proto-stream.el (open-proto-stream): Use network, not stream.
	(open-proto-stream): Add a way to specify what the end of a command is.

	* nntp.el (nntp-open-connection): Use proto-streams for the relevant
	connections types.
	(nntp-open-network-stream): Removed.
	(nntp-open-ssl-stream): Removed.
	(nntp-open-tls-stream): Removed.
	(nntp-ssl-program): Removed.

	* nnimap.el (nnimap-open-connection): Check for "OK" from the greeting.

2010-11-27  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el: Fix typos.
	(nnir-retrieve-headers-override-function): Rename variable to reflect
	new semantics.
	(nnir-article-group, nnir-article-number, nnir-article-rsv): New helper
	macros.
	(nnir-request-article, nnir-request-move-article): Use them.
	(nnir-categorize): New function.
	(nnir-run-query): Use it.
	(nnir-retrieve-headers): Rewrite to batch header retrieval.
	(nnir-run-gmane): nnir-retrieve-headers now returns the headers already
	sorted.
	(nnir-group-full-name): Use gnus-group-full-name instead.
	(nnir-artlist-artitem-group, nnir-artlist-artitem-number)