@@ -1,5 +1,9 @@
 2010-11-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-stream): Change default to `undecided'.
+	(nnimap-open-connection): If `nnimap-stream' is `undecided', try ssl
+	first, and then network.
+
 	* proto-stream.el (proto-stream-always-use-starttls): New variable.
 	(proto-stream-open-starttls): De-duplicate the starttls code.
 	(proto-stream-open-starttls): Folded back into the main function.
